fixed code, so it actually works

--- a/index.html
+++ b/index.html
@@ -56,45 +56,38 @@
 </div>
 
 
-    <script src="main.js">
+    <script>
         function checkLang(){
-            let text;
-            let language = document.querySelector("#lang").value;
+            let language = document.querySelector("#lang").value.toLowerCase();
 
             switch(language) {
                 case "french":
-                    text = "'Bonjour!' means hello in French.";
+                    document.querySelector("#translation").innerHTML = "'Bonjour' means hello in french.";
                     break;
                 case "german":
-                    text = "'Guten Tag' means hello in German.";
+                    document.querySelector("#translation").innerHTML = "'Guten Tag' means hello in German.";
                     break;
                 case "dutch":
-                    text = "'Goededag' means hello in Dutch.";
+                    document.querySelector("#translation").innerHTML = "'Goededag' means hello in Dutch.";
                     break;
                 default: 
-                text = "Sorry, but we don't teach that language at your school!"
+                    document.querySelector("#translation").innerHTML = "Sorry, but we don't teach that language at your school!";
 
             }
-
-            document.querySelector('translation')
+            // document.querySelector('translation');
         }
-
-    function resetParagraph()
-    {
-        document.querySelector('#translation')
-    }
-
-    function resetInputField()
-    {
-        document.querySelector('#lang')
-    }
-
-
-    document,querySelector('#resetALL').addEventListoner('click', ()
-    => {
-        resetParagraph();
-        resetInputField();
+    
+    document.querySelector('#resetALL').addEventListener('click', () => {
+        document.querySelector("#translation").innerHTML = "";
+        document.querySelector("#lang").value = "";
     });
+
+    document.querySelector("#check").addEventListener('click', checkLang);
+
+    let instructions = "Which language do you want to learn?"
+    let student = "by Abraham Lincoln"
+    let project = "Switch Statement Translator Project"
+   
 
     document.querySelector('#directions').innerHTML = instructions;
     document.querySelector('#student').innerHTML = student;
